<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#508E24"
            android:fontFamily="@font/kurale"
            android:gravity="center"
            android:text="@string/judul_menu"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_bar"
            app:startIconDrawable="@drawable/baseline_restaurant_menu_24"
            android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pencarian_inp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColor="#FF272572"

                />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/buttonCari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:textSize="15sp"

            android:text="@string/btn_submit"
            android:textColor="#090909"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <ImageView
            android:contentDescription="@string/foodies"
            android:id="@+id/gambar"
            android:layout_width="300dp"
            android:layout_marginTop="16dp"
            android:layout_height="290dp"
            android:foregroundGravity="center_horizontal"
            tools:src="@drawable/pasta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonCari" />

        <TextView
            android:id="@+id/nama"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/kurale"
            android:gravity="center"

            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gambar"
            tools:text="Pasta" />

        <TextView

            android:id="@+id/deskripsiResep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/baloo_bhai_2_medium"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nama"
            app:layout_constraintVertical_bias="1.0"
            tools:text="Pasta dari Italia adalah hidangan yang terbuat dari adonan tepung terigu, air, dan telur (atau tanpa telur dalam beberapa jenis pasta) yang dicetak menjadi berbagai bentuk seperti spaghetti, penne, farfalle, dan lain-lain. Pasta biasanya dimasak dalam air yang direbus dan dihidangkan dengan berbagai macam saus seperti saus tomat, saus pesto, saus krim, atau saus daging" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>